--- a/.github/workflows/ci_testing.yml
+++ b/.github/workflows/ci_testing.yml
@@ -19,6 +19,7 @@ jobs:
     - name: Set up JDK 23
       uses: actions/setup-java@v3
       with:
+        distribution: 'temurin'
         java-version: '23'
 
     # Step 3: Cache Maven dependencies to speed up the build
