--- a/.github/workflows/ci_testing.yml
+++ b/.github/workflows/ci_testing.yml
@@ -22,7 +22,11 @@ jobs:
         distribution: 'temurin'
         java-version: '23'
 
-    # Step 3: Cache Maven dependencies to speed up the build
+    # Step 3: Navigate to the directory containing pom.xml
+    - name: Change directory to project root
+      run: cd D:\a\qa-automation-challenge\qa-automation-challenge\TestAutomation\TestAutomationFramework\
+
+    # Step 4: Cache Maven dependencies to speed up the build
     - name: Cache Maven dependencies
       uses: actions/cache@v3
       with:
@@ -31,10 +35,10 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-maven-
 
-    # Step 4: Install project dependencies and build the project
+    # Step 5: Install project dependencies and build the project
     - name: Build with Maven
       run: mvn clean install -DskipTests
 
-    # Step 5: Run the tests
+    # Step 6: Run the tests
     - name: Run Selenium tests
       run: mvn test
