--- a/.github/workflows/ci_testing.yml
+++ b/.github/workflows/ci_testing.yml
@@ -33,7 +33,7 @@ jobs:
 
     # Step 4: Install project dependencies and build the project
     - name: Build with Maven
-      run: mvn clean install -DskipTests
+      run: mvn -f TestAutomation/TestAutomationFramework/pom.xml clean install -DskipTests 
 
     # Step 5: Run the tests
     - name: Run Selenium tests
