--- a/.github/workflows/ci_testing.yml
+++ b/.github/workflows/ci_testing.yml
@@ -50,14 +50,17 @@ jobs:
     # Step 7: Check if the server is up
     - name: Wait for Server to be Ready
       run: |
-        for i in {1..30}; do
-          if curl --silent --fail http://localhost:8080; then
-            echo "Server is up!"
-            break
+        count=0
+        until curl --silent --fail http://localhost:8080; do
+          ((count++))
+          if [ $count -ge 30 ]; then
+            echo "Server did not start in time."
+            exit 1
           fi
           echo "Waiting for server..."
           sleep 5
         done
+        echo "Server is up!"
 
     # Step 8: Run the tests
     - name: Run Selenium tests
