--- a/.github/workflows/ci_testing.yml
+++ b/.github/workflows/ci_testing.yml
@@ -1,10 +1,12 @@
 name: Java Test Automation Framework for CI with Maven
 
 on:
-  #Trigger this workflow on pull requests
+  # Trigger this workflow on pull requests
   pull_request:
     branches:
       - main  # Replace with your main branch name if different
+  # Allow manual triggering of the workflow
+  workflow_dispatch:
 
 jobs:
   build:
@@ -41,27 +43,27 @@ jobs:
     - name: Build with Maven
       run: mvn -f TestAutomation/TestAutomationFramework/pom.xml clean install -DskipTests 
 
-    # Step 6: Set up and start the client and server
+    # Step 6 Set up and start the client and server
     - name: Start Client and Server
       run: |
         npm run setup
         npm run start &
-        sleep 5
+        echo "Server and client starting..."
 
-    # # Step 7: Check if the server is up
-    # - name: Wait for Server to be Ready
-    #   run: |
-    #     count=0
-    #     until curl --silent --fail http://localhost:8080; do
-    #       ((count++))
-    #       if [ $count -ge 30 ]; then
-    #         echo "Server did not start in time."
-    #         exit 1
-    #       fi
-    #       echo "Waiting for server..."
-    #       sleep 5
-    #     done
-    #     echo "Server is up!"
+    # Step 7: Wait for Server to be Ready
+    - name: Wait for Server to be Ready
+      run: |
+        count=0
+        until curl --silent --fail http://localhost:8080; do
+          ((count++))
+          if [ $count -ge 60 ]; then  # Increased attempts
+            echo "Server did not start in time."
+            exit 1
+          fi
+          echo "Waiting for server... attempt $count"
+          sleep 5
+        done
+        echo "Server is up!"
 
     # Step 8: Run the tests
     - name: Run Selenium tests
